reorganized file structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
+#Clean
+bottoken.txt
+apikey.txt
+.idea
+.gitattributes
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-token.txt
-apikey.txt
 
 # C extensions
 *.so
